[package]
name = "date_security_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 密码学：RSA 与大整数
rsa = { version = "0.9", features = ["pem", "sha2"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"

# 密码学：AES-GCM 对称加密
aes-gcm = "0.10"

# 密码学：AES-128-CMAC 哈希替代
aes = "0.8"
cmac = "0.7"

# SHA-256 用于先摘要大型明文以缩短 CMAC 输入
sha2 = "0.10"

# 密码学：FAEST 后量子签名（通过 C-FFI 链接 libs/faest）

# 随机数生成
rand = "0.8"

# 时间戳
chrono = { version = "0.4", features = ["serde"] }

# 十六进制编码
hex = "0.4"

# 错误处理
anyhow = "1"
thiserror = "1"

# Base64 编码（用于 JSON 序列化二进制数据）
base64 = "0.22"
# 使用 rug（GMP 后端）加速大整数模幂
# rug 已不再直接使用，改用 num-bigint 的 modpow
# C FFI size_t
libc = "0.2"

[build-dependencies]
cc = "1.0"
